[project]
name = "auto-vpn-sign"
version = "1.0.0"
description = "自动签到领取流量工具"
authors = [{name = "auto-vpn-sign"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.2",
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.scripts]
auto-vpn-sign = "main:main"
